# wgpu-benchmark

./: Cargo.toml  README.md  build.rs  texture.rs
res/boat/: boat.mtl
res/chair/: Chair.mtl
res/modifiedcontainer/: container.mtl
res/monkey/: monkey2k.mtl
res/mug/: mug.mtl
res/officechair/: officechair.mtl
res/viking-room/: viking-room.mtl
src/: main.rs  model.rs  shader.vert  texture.rs
