[package]
name = "TestWGPURust"
version = "0.1.0"
authors = ["Ryan Williams <ryanwilliamsdesktop@outlook.com>"]
edition = "2018"


[dependencies]
image = "0.23"
winit = "0.24.0"
cgmath = "0.18.0"
env_logger = "0.8.2"
log = "0.4"
wgpu = "0.6"
futures = "0.3"

# NEW!
[build-dependencies]
shaderc = "0.7.0"
glob = "0.3"
fs_extra = "1.2"
anyhow = "1.0"

[[bin]]
name = "tutorial3-pipeline"
path = "src/main.rs"


#[[bin]]
#name = "tutorial3-challenge"
#path = "src/challenge.rs"